# actix-sample-api

./: .gitignore  Cargo.toml  Makefile
src/: domains.rs  main.rs
src/domains/: entities.rs
