[package]
name = "actix-sample-api"
version = "0.1.0"
authors = ["poposuke1995x <jimi.woodstock1995@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0"
actix-rt = "1.1.1"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
env_logger = "0.7.1"
listenfd = "0.3"
serde = "1.0"
serde_json = "1.0"
uuid = { version = "0.6", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
r2d2 = "0.8"
lazy_static = "1.4"
